--- a/TaskBoardApp/TaskBoardApp/Views/Shared/_LoginPartial.cshtml
+++ b/TaskBoardApp/TaskBoardApp/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using TaskBoardApp.Data.Entities
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
